tests/test_proof/good/functions.catala_en
## Test

```catala
declaration scope A:
  context x content integer depends on y content boolean
  context z content integer

scope A:
  definition x of y under condition y consequence equals 0
  definition x of y under condition not y consequence equals 1
  definition z under condition x of true = 0 consequence equals 0
  definition z under condition x of true < 0 consequence equals -1
  definition z under condition x of true > 0 consequence equals 1
```
```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "z" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/good/functions.catala_en:6.10-11:
└─┐
6 │   context z content integer
  │           ‾
  └─ Test
[RESULT] No errors found during the proof mode run.
```
