tests/test_proof/bad/enums-nonbool-overlap.catala_en
## Test

```catala
declaration enumeration T:
   -- C content boolean
   -- D content integer

declaration enumeration S:
    -- A content integer
    -- B content T

declaration scope A:
  output x content integer
  internal y content S

scope A:
  definition y equals B content (D content 1)
  definition x under condition (match y with pattern -- A of a: 1 -- B of b: 2) < 2 consequence equals 0
  definition x under condition match y with pattern -- A of a: a < 0 -- B of b: true consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples
[WARNING] The constructor "C" of enumeration "T" is never used; maybe it's unnecessary?

┌─⯈ enums-nonbool-overlap.catala_en:5.7-5.8:
└─┐
5 │    -- C content boolean
  │       ‾
  └─ Test
[WARNING] [A.x] At least two exceptions overlap for this variable:
┌─⯈ enums-nonbool-overlap.catala_en:13.10-13.11:
└──┐
13 │   output x content integer
   │          ‾
   └─ Test
Counterexample generation is disabled so none was generated.
```
